# ovrig_natur

./: .gitignore  areal_MI_typer.py  main.py  pyproject.toml
