[project]
name = "ovrig-natur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.66.0",
    "duckdb>=1.3.2",
    "marimo>=0.15.2",
    "plotly>=6.3.0",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "sqlglot>=27.12.0",
]
